--- a/lp-temp/css/grid.css
+++ b/lp-temp/css/grid.css
@@ -207,7 +207,8 @@ input[type="button"] {
   background-color: transparent;
   border: 1px solid #bbb;
   cursor: pointer;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 .button:hover,
 button:hover,
 input[type="submit"]:hover,
